Added missing language items

--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.374
+MODULE_VERSION: 0.375
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -22,6 +22,7 @@ MODULE_STATUS: stable
 
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
+UPDATE_DESCRIPTION: [DWK] Added missing language items
 UPDATE_DESCRIPTION: [DWK] Added content dropdown to the announcement view page
 UPDATE_DESCRIPTION: [DWK] Fixed numerous bugs, including repetition in listing announcements
 UPDATE_DESCRIPTION: [DWK] Put back missing security rules and requireslogin stuff
@@ -94,3 +95,10 @@ TEXT: mod_announcements_latestcourse|Latest course announcements|Latest [-contex
 TEXT: mod_announcements_hasaddeda|has added a|has added a
 TEXT: mod_announcement_includeannbody|Include announcements body in the email|This option is to enable including the announcements body in the email alert. default is set to FALSE, setting it to TRUE will enable this feature.
 TEXT: mod_announcements_errortitlemessagerequired||Both title and message are required
+
+
+TEXT: mod_announcements_emailtitle|Important announcement|Important announcement
+TEXT: mod_announcements_emailbody1|has posted an important new announcement titled|has posted an important new announcement titled
+TEXT: mod_announcements_emailbody2|has updated  announcement titled|has updated  announcement titled
+TEXT: mod_announcements_emailbody3|To view the announcement, click on this link|To view the announcement, click on this link
+TEXT: mod_announcements_rootword|????????ROOTWORD???????|????????ROOTWORD???????
