--- a/bannerhelper/register.conf
+++ b/bannerhelper/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Banner helper
 MODULE_DESCRIPTION: Holds tree text files that can be displayed in the banner. For use with the dkeats.clean canvas and its derivatives.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 17, 2012, 10:05 am
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.018
 MODULE_PATH: bannerhelper
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,10 +11,10 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bannerhelper
 MODULE_CATEGORY: bannerhelper
 MODULE_STATUS: stable
+MENU_CATEGORY: Admin
 
 TABLE: tbl_bannerhelper_moduleblocks
 
-MENU_CATEGORY: Developer
 BLOCK: about
 WIDEBLOCK: banner0
 WIDEBLOCK: banner1
