Shortened name in consideration of dropdowns

--- a/foaf/register.conf
+++ b/foaf/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: foaf
-MODULE_NAME: FOAF RDF Implementation module
+MODULE_NAME: FOAF RDF
 MODULE_DESCRIPTION: Friend of a Friend (FOAF) is a RDF implementation of the Semantic web to gather information about your friends and colleauges to create semantic communities. FOAF (Friend of a Friend) is a project for machine-readable modelling of homepage-like profiles and social networks. Founded by Libby Miller and Dan Brickley, at the heart is a schema for defining relationships between people, and various attributes such as name, gender, and interests. To enable linking, each record includes unique identifiers for each friend (such as SHA1 checksums of their E-mail addresses, a Jabber ID, or a URI to the homepage or weblog of the person). Based on RDF, defined using OWL and by design easily extended, it allows semantically meaningful data sharing between varied computing environments.
 MODULE_AUTHORS: Paul Scott, Stelio Macumbe
 MODULE_RELEASEDATE: 2006 09 06
-MODULE_VERSION: 1.803
+MODULE_VERSION: 1.804
 MODULE_PATH: foaf
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
