--- a/bannerhelper/register.conf
+++ b/bannerhelper/register.conf
@@ -3,15 +3,21 @@ MODULE_NAME: Banner helper
 MODULE_DESCRIPTION: Holds tree text files that can be displayed in the banner. For use with the dkeats.clean canvas and its derivatives.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 17, 2012, 10:05 am
-MODULE_VERSION: 0.020
+MODULE_VERSION: 0.221
 MODULE_PATH: bannerhelper
-MODULE_ISADMIN: 0
+MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bannerhelper
-MODULE_CATEGORY: bannerhelper
+MODULE_CATEGORY: admin
 MODULE_STATUS: stable
+
 MENU_CATEGORY: Admin
+PAGE: admin_site
+SIDEMENU: admin-3
+USE_GROUPS: Site Admin
+
+UPDATE_DESCRIPTION: [dwk] Added security to menu
 
 TABLE: tbl_bannerhelper_moduleblocks
 
