Security for the admin menu, added security to code

--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,14 +3,16 @@ MODULE_NAME: Text block
 MODULE_DESCRIPTION: Text blocks for Chisimba
 MODULE_AUTHORS: Derek Keats, Charl Mert
 MODULE_RELEASEDATE: 2007 04 14
-MODULE_VERSION: 0.886
+MODULE_VERSION: 0.888
 MODULE_PATH: textblock
-MODULE_ISADMIN: 0
+MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: textblock
 MODULE_CATEGORY: utility
+MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: [dwk] Security for the admin menu, added security to code
 UPDATE_DESCRIPTION: Fixed error when array was empty
 UPDATE_DESCRIPTION: Removed the deprecated code
 UPDATE_DESCRIPTION: Changed block selection to dropdown, returns to correct blocktype
@@ -18,12 +20,14 @@ UPDATE_DESCRIPTION: Refactored to use a more current approach, added washout par
 UPDATE_DESCRIPTION: [pwando] Commited the previous version. Just run the patch and test. This should restore all the broken blocks.
 UPDATE_DESCRIPTION: Added ability to suppress the title
 UPDATE_DESCRIPTION: Added css_id that was added to sql directly instead of sql update. Please DO NOT apply this update if you textblocks work fine.
+
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
 
-MENU_CATEGORY: admin
+MENU_CATEGORY: Admin
 PAGE: admin_site
-MODULE_STATUS: stable
+SIDEMENU: admin-3
+USE_GROUPS: Site Admin
 
 TABLE: tbl_textblock
 BLOCK: text1
