Fixed delete link showing when not logged in

--- a/wall/register.conf
+++ b/wall/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Wall
 MODULE_DESCRIPTION: A simple wall module that makes use of OEMBED and that tries to look a bit like Facebook's wall
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 0.069
+MODULE_VERSION: 0.070
 MODULE_PATH: wall
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -19,7 +19,6 @@ ISCONTEXTPLUGIN: 1
 DEPENDS_CONTEXT: 0
 
 
-MENU_CATEGORY: Developer
 WIDEBLOCK: userwall
 WIDEBLOCK: contextwall
 WIDEBLOCK: sitewall
@@ -28,6 +27,7 @@ WIDEBLOCK: genericwall
 TABLE: tbl_wall_posts
 TABLE: tbl_wall_comments
 
+UPDATE_DESCRIPTION: [dwk] Fixed delete link showing when not logged in
 UPDATE_DESCRIPTION: [dwk] Added text abstractions
 UPDATE_DESCRIPTION: [dwk] Tested and marked it stable
 UPDATE_DESCRIPTION: [dwk] Fixed a few bugs and added divs for styling
