--- a/bannerhelper/register.conf
+++ b/bannerhelper/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Banner helper
 MODULE_DESCRIPTION: Holds tree text files that can be displayed in the banner. For use with the dkeats.clean canvas and its derivatives.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 17, 2012, 10:05 am
-MODULE_VERSION: 0.221
+MODULE_VERSION: 0.223
 MODULE_PATH: bannerhelper
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
@@ -16,17 +16,19 @@ MENU_CATEGORY: Admin
 PAGE: admin_site
 SIDEMENU: admin-3
 USE_GROUPS: Site Admin
+USE_GROUPS: BannerHelper
 
+UPDATE_DESCRIPTION: [dwk] Made menu show contents rather than menu
 UPDATE_DESCRIPTION: [dwk] Added security to menu
 
 TABLE: tbl_bannerhelper_moduleblocks
 
 BLOCK: about
-WIDEBLOCK: banner0
-WIDEBLOCK: banner1
-WIDEBLOCK: banner2
-WIDEBLOCK: banner3
-WIDEBLOCK: menu
+#WIDEBLOCK: banner0
+#WIDEBLOCK: banner1
+#WIDEBLOCK: banner2
+#WIDEBLOCK: banner3
+#WIDEBLOCK: menu
 
 COMMENT: Creating a directory for the module
 CREATE_FOLDER: Yes
