Turned off wrapping in content and textblock titles

--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Text block
 MODULE_DESCRIPTION: Text blocks for Chisimba
 MODULE_AUTHORS: Derek Keats, Charl Mert
 MODULE_RELEASEDATE: 2007 04 14
-MODULE_VERSION: 0.888
+MODULE_VERSION: 0.889
 MODULE_PATH: textblock
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 0
@@ -12,6 +12,7 @@ MODULE_LANGTERMS: textblock
 MODULE_CATEGORY: utility
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: [dwk] Turned off wrapping in content and textblock titles
 UPDATE_DESCRIPTION: [dwk] Security for the admin menu, added security to code
 UPDATE_DESCRIPTION: Fixed error when array was empty
 UPDATE_DESCRIPTION: Removed the deprecated code
