Added better detection, ability for anyone to write to site blog, layout elements, and fixed about 20 unfinished items. Don't use yet, security is not done.

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: simpleblog
 MODULE_NAME: Simple blog
-MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-slevel blogs.
+MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.009
+MODULE_VERSION: 0.010
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -37,12 +37,12 @@ BLOCK: simpleblogright
 BLOCK: addpost
 BLOCK: aboutblog
 
-COMMENT: --- Set the config parameters and their defaults.
+// Set the config parameters and their defaults.
 CONFIG: simpleblog_numpostdisplay|5|mod_simpleblog_numpostdisplay
 TEXT: simpleblog_numpostdisplay|Number of posts to display on home page|Number of posts to display on home page
 CONFIG: simpleblog_defaulttype|personal|mod_simpleblog_defaulttype
 TEXT: simpleblog_defaulttype|Default type of blog to display|Default type of blog to display when no information is provided in the querystring (default - personal, options - personal, site). Note that you cannot make the default context as the user might not be in a [-contex-] when opening the blog.
-CONFIG: simpleblog_defaultblog|1|mod_simpleblog_defaultblog
+CONFIG: simpleblog_defaultblog|siteblog|mod_simpleblog_defaultblog
 TEXT: mod_simpleblog_defaultblog|Default blog to display|Default blog to display when no information is provided in the querystring. If the default blog is personal, then this will be the userid of the default blogger. Leave blank to show list of bloggers (this functionality is not completed). Note that you cannot make the default context as the user might not be in a [-contex-] when opening the blog.
 
 
