Further development on this module. It is now working, albeit with some bugs still to sort out.

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,19 +3,20 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.010
+MODULE_VERSION: 0.020
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: simpleblog
 MODULE_CATEGORY: simpleblog
+MODULE_STATUS: Beta
 
 COMMENT: Database tables to create
 TABLE: tbl_simpleblog_posts
 TABLE: tbl_simpleblog_blogs
 TABLE: tbl_simpleblog_rightsgroups
-TABLE: tbl_simpleblog_pageblocks
+TABLE: tbl_simpleblog_moduleblocks
 
 DEPENDS: oembed
 DEPENDS: wall
@@ -26,14 +27,13 @@ ISCONTEXTPLUGIN: 1
 DEPENDS_CONTEXT: 0
 
 COMMENT: /BEGIN----------------- THESE ARE FOR USE DURING DEVELOPMENT
-MENU_CATEGORY: Developer
+MENU_CATEGORY: User
 COMMENT----DEPENDS: demodata
 COMMENT: /END  ----------------- THESE ARE FOR USE DURING DEVELOPMENT
 
 COMMENT: --- Register the blocks that this module provides
 WIDEBLOCK: simpleblogmiddle
-BLOCK: simpleblogleft
-BLOCK: simpleblogright
+WIDEBLOCK: siteblog
 BLOCK: addpost
 BLOCK: aboutblog
 
@@ -54,10 +54,23 @@ TEXT: mod_simpleblog_statuslabel|Indicate the publication status of this post|In
 TEXT: mod_simpleblog_draft|Label where status is draft|draft
 TEXT: mod_simpleblog_posted|Label where status is posted|posted
 TEXT: mod_simpleblog_norights|Message when the user has no edit or add writes|You do not have rights to edit or create posts in this blog.
-TEXT: mod_simpleblog_writepost|Simpleblog new post|Simpleblog new post
+TEXT: mod_simpleblog_writepost|Simpleblog new post|Write a new post
 TEXT: mod_simpleblog_writepostlink|Write a new blog post|Write a new blog post
 TEXT: mod_simpleblog_aboutblog|About this blog|About this blog
 TEXT: mod_simpleblog_postedby|Posted by|Posted by
 TEXT: mod_simplelblog_noblogyet|No blog yet by the given user|The user has not yet created a blog
-TEXT: mod_simplelblog_yourfirstblog|Message when you have no blog yet|You have no blog posts. You can create one now.
+TEXT: mod_simplelblog_yourfirstblog|Message when you have no blog yet|You have no blog posts. You can create one now. Please take the time to enter a discription of your blog before you make your first post.
 TEXT: mod_simpleblog_blogname|The name of this blog|The name of this blog
+TEXT: mod_simpleblog_notmember|Alert the user that they are not a member of the SimpleBloggers group|You do not have blogging rights. You need to be a member of the group SimpleBloggers to be able to create a blog.
+
+TEXT: mod_simpleblog_posts|Blog posts|Blog posts
+TEXT: mod_simpleblog_siteposts|Site posts|Site posts
+TEXT: mod_simpleblog_personal|My personal blog|My personal blog
+TEXT: mod_simpleblog_context|[-CONTEXT-] blog|[-CONTEXT-] blog
+TEXT: mod_simpleblog_site|Site blog|Site blog
+TEXT: mod_simpleblog_defaulttype|The default blog type|The default blog type (must be personal or site as context can only be used in a [-CONTEXT-])
+TEXT: mod_simpleblog_siteblog|Lets the user know they are viewing the site blog|You are viewing the site blog for [-SITE-]. The site blog is written by any members of the site who have appropriate permissions.
+
+COMMENT: Help text entries
+TEXT: help_simpleblog_about_title|About SimpleBlog|About SimpleBlog
+TEXT: help_simpleblog_about|Text for about SimpleBlog|A simplified version of a blog module that uses a dynamic canvas interface allowing users to turn on side blocks using page level blocks within the module. It also provides a number of blocks that can be used to render blog content within other dynamic interface pages. It supports personal blogs, site-level blogs and context-level blogs.
