--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.023
+MODULE_VERSION: 0.024
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -35,6 +35,7 @@ WIDEBLOCK: simpleblogmiddle
 WIDEBLOCK: siteblog
 BLOCK: addpost
 BLOCK: aboutblog
+BLOCK: aboutsiteblog
 
 // Set the config parameters and their defaults.
 CONFIG: simpleblog_numpostdisplay|5|mod_simpleblog_numpostdisplay
