Various improvements, mainly to the register.conf that is generated

--- a/makemodule/register.conf
+++ b/makemodule/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Module builder
 MODULE_DESCRIPTION: Enable developers to quickly build a module that complies with Chisimba development standards.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 0.06
+MODULE_VERSION: 0.061
 MODULE_PATH: makemodule
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -21,6 +21,7 @@ BLOCK: linksmakemodule
 
 USE_GROUPS: Developers
 
+UPDATE_DESCRIPTION: Various improvements, mainly to the register.conf that is generated
 UPDATE_DESCRIPTION: Changed it to a 2 column layout
 UPDATE_DESCRIPTION: Added language terms and MODULE_STATUS to generated register.conf
 UPDATE_DESCRIPTION: Fixed it so it cannot be used by Administrative User
