--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.024
+MODULE_VERSION: 0.025
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -74,3 +74,7 @@ TEXT: mod_simpleblog_siteblog|Lets the user know they are viewing the site blog|
 COMMENT: Help text entries
 TEXT: help_simpleblog_about_title|About SimpleBlog|About SimpleBlog
 TEXT: help_simpleblog_about|Text for about SimpleBlog|A simplified version of a blog module that uses a dynamic canvas interface allowing users to turn on side blocks using page level blocks within the module. It also provides a number of blocks that can be used to render blog content within other dynamic interface pages. It supports personal blogs, site-level blogs and context-level blogs.
+
+USES: word_start|Start|Start
+USES: word_end|End|End
+USES: word_page|Page|Page
