--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.026
+MODULE_VERSION: 0.027
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -36,6 +36,7 @@ WIDEBLOCK: siteblog
 BLOCK: addpost
 BLOCK: aboutblog
 BLOCK: aboutsiteblog
+BLOCK: archives
 
 // Set the config parameters and their defaults.
 CONFIG: simpleblog_numpostdisplay|5|mod_simpleblog_numpostdisplay
@@ -70,6 +71,9 @@ TEXT: mod_simpleblog_context|[-CONTEXT-] blog|[-CONTEXT-] blog
 TEXT: mod_simpleblog_site|Site blog|Site blog
 TEXT: mod_simpleblog_defaulttype|The default blog type|The default blog type (must be personal or site as context can only be used in a [-CONTEXT-])
 TEXT: mod_simpleblog_siteblog|Lets the user know they are viewing the site blog|You are viewing the site blog for [-SITE-]. The site blog is written by any members of the site who have appropriate permissions.
+TEXT: mod_simpleblog_archive|Achive|Archive
+TEXT: mod_simpleblog_lastmo|Last month|Last month
+TEXT: mod_simpleblog_thismo|This month|This month
 
 COMMENT: Help text entries
 TEXT: help_simpleblog_about_title|About SimpleBlog|About SimpleBlog
