added tagging = complete

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.027
+MODULE_VERSION: 0.030
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -37,6 +37,7 @@ BLOCK: addpost
 BLOCK: aboutblog
 BLOCK: aboutsiteblog
 BLOCK: archives
+BLOCK: tagcloud
 
 // Set the config parameters and their defaults.
 CONFIG: simpleblog_numpostdisplay|5|mod_simpleblog_numpostdisplay
@@ -74,6 +75,9 @@ TEXT: mod_simpleblog_siteblog|Lets the user know they are viewing the site blog|
 TEXT: mod_simpleblog_archive|Achive|Archive
 TEXT: mod_simpleblog_lastmo|Last month|Last month
 TEXT: mod_simpleblog_thismo|This month|This month
+TEXT: mod_simpleblog_home|Blog home|Blog home
+TEXT: mod_simpleblog_viewwall|Blog wall|Blog wall
+TEXT: mod_simpleblog_tagcloud|Tag cloud|Tag cloud
 
 COMMENT: Help text entries
 TEXT: help_simpleblog_about_title|About SimpleBlog|About SimpleBlog
