Search added for simpleblog

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.031
+MODULE_VERSION: 0.033
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,9 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: simpleblog
 MODULE_CATEGORY: simpleblog
 MODULE_STATUS: Beta
+
+UPDATE_DESCRIPTION: [dwk] Added full text indices and search code in 0.033
+UPDATE_DESCRIPTION: [dwk] Added simple search block in 0.032
 
 COMMENT: Database tables to create
 TABLE: tbl_simpleblog_posts
@@ -38,6 +41,7 @@ BLOCK: aboutblog
 BLOCK: aboutsiteblog
 BLOCK: archives
 BLOCK: tagcloud
+BLOCK: simplesearch
 
 // Set the config parameters and their defaults.
 CONFIG: simpleblog_numpostdisplay|5|mod_simpleblog_numpostdisplay
@@ -78,6 +82,7 @@ TEXT: mod_simpleblog_thismo|This month|This month
 TEXT: mod_simpleblog_home|Blog home|Blog home
 TEXT: mod_simpleblog_viewwall|Blog wall|Blog wall
 TEXT: mod_simpleblog_tagcloud|Tag cloud|Tag cloud
+TEXT: mod_simpleblog_search|Search blogs|Search blogs
 
 COMMENT: Help text entries
 TEXT: help_simpleblog_about_title|About SimpleBlog|About SimpleBlog
