Turn off self-register based on system settings

--- a/webpresent/register.conf
+++ b/webpresent/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: WebPresent
 MODULE_DESCRIPTION: The WebPresent module is a presentation sharing and conversion system. It allows users to upload PowerPoint and OpenOffice presentations, tag them, make them searchable, and have them converted into various formats such as PDF and SWF.
 MODULE_AUTHORS: Tohir Solomons, enhancements by david wafula
 MODULE_RELEASEDATE: 2007 07 24
-MODULE_VERSION: 1.520
+MODULE_VERSION: 1.521
 MODULE_PATH: webpresent
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,7 @@ MODULE_CATEGORY: webpresent
 MODULE_STATUS: stable
 MENU_CATEGORY: user
 
+UPDATE_DESCRIPTION: [dwk] Disabled self register if it is disabled in settings
 UPDATE_DESCRIPTION: added flash preview to presentation view
 UPDATE_DESCRIPTION: added dependency check of realtime
 UPDATE_DESCRIPTION: Fixed default tpl typo
