Added data-text - was missing in tweetbutton class 0.210

--- a/twitter/register.conf
+++ b/twitter/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Twitter
 MODULE_DESCRIPTION: Twitter is a module that creates an integration between your Chisimba site using your Twitter account.
 MODULE_AUTHORS: Derek Keats, Paul Scott, Charl van Niekerk
 MODULE_RELEASEDATE: 2008 01 08
-MODULE_VERSION: 0.209
+MODULE_VERSION: 0.210
 MODULE_PATH: twitter
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,7 +14,7 @@ MODULE_CATEGORY: twitter
 DEPENDS: userparamsadmin
 DEPENDS: zend
 
-
+UPDATE_DESCRIPTION: [dwk] Added data-text - was missing in tweetbutton class 0.210
 UPDATE_DESCRIPTION: Rolled back change to attempt to get it to work with https
 UPDATE_DESCRIPTION: Added a div around the Tweet button
 UPDATE_DESCRIPTION: Added the uri parameter to the getButton method.
