Google plus button added, dependency on socialweb created

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.034
+MODULE_VERSION: 0.035
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,7 @@ MODULE_LANGTERMS: simpleblog
 MODULE_CATEGORY: simpleblog
 MODULE_STATUS: Beta
 
+UPDATE_DESCRIPTION: [dwk] Added Google+ button, dependency on new socialweb module 0.035
 UPDATE_DESCRIPTION: [dwk] Added get blog by poster for a given blog with link, and tweet button 0.034
 UPDATE_DESCRIPTION: [dwk] Added full text indices and search code in 0.033
 UPDATE_DESCRIPTION: [dwk] Added simple search block in 0.032
@@ -23,6 +24,7 @@ TABLE: tbl_simpleblog_moduleblocks
 
 DEPENDS: oembed
 DEPENDS: wall
+DEPENDS: socialweb
 
 COMMENT: --- Make it context aware and a context plugin, but not forced to context
 CONTEXT_AWARE: 1
