--- a/bannerhelper/register.conf
+++ b/bannerhelper/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Banner helper
 MODULE_DESCRIPTION: Holds tree text files that can be displayed in the banner. For use with the dkeats.clean canvas and its derivatives.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 17, 2012, 10:05 am
-MODULE_VERSION: 0.225
+MODULE_VERSION: 0.226
 MODULE_PATH: bannerhelper
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
@@ -18,6 +18,7 @@ SIDEMENU: admin-3
 USE_GROUPS: Site Admin
 USE_GROUPS: BannerHelper
 
+UPDATE_DESCRIPTION: [dwk] Fixed updates overwrite banners and menus 0.226
 UPDATE_DESCRIPTION: [dwk] Fixed menu breaks edit view
 UPDATE_DESCRIPTION: [dwk] Put a BR before the edit icon so it is visible even if the content is wide
 UPDATE_DESCRIPTION: [dwk] Made menu show contents rather than menu
