--- a/oembed/register.conf
+++ b/oembed/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Oembed
 MODULE_DESCRIPTION: Implementation of the oEmbed specification.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2010 01 01
-MODULE_VERSION: 0.083
+MODULE_VERSION: 0.084
 MODULE_PATH: oembed
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,8 +14,13 @@ MODULE_CATEGORY: oembed
 
 TAGS: mashup|filters
 
+// Set the config parameters and their defaults.
+//CONFIG: oembed_apikey|d10d8a7e7a624f0fadd8b3e018fbd621|mod_oembed_apikey
+//TEXT: mod_oembed_apikey|API Key for embed.ly|You need an API key for OEMBED to function to its potential. 
+
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: [dwk] Replaced with starfish library
 UPDATE_DESCRIPTION: Fixed error with newer jQuery
 UPDATE_DESCRIPTION: Removed oembed from the menu, marked it stable (consumption only)
 UPDATE_DESCRIPTION: Removed explicit jQuery verison from oembed class
