Added ODP to the allowed file types, fixed misspelling of $description as $desciption

--- a/assignment/register.conf
+++ b/assignment/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Assignments
 MODULE_DESCRIPTION: Assignments enable students to view a list of booked assignments. The status is displayed indicating whether it is open, closed or if the student has submitted. The mark is shown once it has been marked.A new assignment can be opened for answering. Students can complete the assignment if its online and submit it. An uploadable or offline assignment can be completed and then loaded into the database. A marked assignment can be opened and the lecturer's comment can be viewed.
 MODULE_AUTHORS: Megan Watson, yasser buchana, Jameel Adam, Paul Mungai, Jeremy OConnor
 MODULE_RELEASEDATE: 2005 01 14
-MODULE_VERSION: 0.614
+MODULE_VERSION: 0.615
 MODULE_PATH: assignment
 MODULE_LANGTERMS: assignment
 MODULE_ISADMIN: 0
@@ -21,6 +21,7 @@ DEPENDS: groupadmin
 DEPENDS: context
 DEPENDS: dhtmlgoodies
 
+UPDATE_DESCRIPTION: [dwk] Added ODP to the allowed file types, fixed misspelling of $description as $desciption
 UPDATE_DESCRIPTION: [jsc] Added check to prevent non-student uploading
 UPDATE_DESCRIPTION: [dwk] Added styles for improved rendering on different skins
 UPDATE_DESCRIPTION: [pwando] - Refactoring assignment wrt gradebook offline assignment uploads
@@ -60,7 +61,7 @@ SIDEMENU: assessment-2
 PAGE: assessment_assessment
 
 CONFIG: DOWNLOAD_FOLDER|/tmp/|mod_assignment_downloadfolder
-CONFIG: FILETYPES_ALLOWED|doc,odt,rtf,txt,docx,mp3,ppt,pptx,pdf|mod_assignment_filetype
+CONFIG: FILETYPES_ALLOWED|doc,odt,rtf,txt,docx,mp3,ppt,pptx,odp,pdf|mod_assignment_filetype
 
 USE_CONTEXT_GROUPS: Students
 CONDITION: isContextStudent|isContextMember|Students
