Changed status to stable

--- a/workgroupadmin/register.conf
+++ b/workgroupadmin/register.conf
@@ -12,7 +12,7 @@ MODULE_LANGTERMS: Workgroups
 MODULE_CATEGORY: workgroups
 MODULE_CATEGORY: admin
 TEXT: mod_workgroupadmin_toolbarname|[-workgroups-] Admin|[-workgroups-] Admin
-MODULE_STATUS: alpha
+MODULE_STATUS: stable
 COMMENT: PAGE: lecturer_assignment
 
 COMMENT: CONTEXT_AWARE: 1
