Module status changes

--- a/adbanner/register.conf
+++ b/adbanner/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Ad Banner
 MODULE_DESCRIPTION: The ad_banner module allows for the creation, tracking and management of ad banners. The banner transitioning effects belong to JQuery 1.2.3. Currently supports the following image types : .jpg|.png|.gif
 MODULE_AUTHORS: Charl Joseph Mert
 MODULE_RELEASEDATE: 2008 03 15
-MODULE_VERSION: 0.213
+MODULE_VERSION: 0.214
 MODULE_PATH: adbanner
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
@@ -13,7 +13,7 @@ MENU_CATEGORY: admin
 BLOCK: adbanner
 MODULE_CATEGORY: banner
 
-MODULE_STATUS: alpha
+MODULE_STATUS: DEPRECATED
 
 TABLE: tbl_ad_banners
 UPDATE_DESCRIPTION: Changed module status to alpha pending testing
