--- a/ai/register.conf
+++ b/ai/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Artificial Intelligence utility module
 MODULE_DESCRIPTION: AI libraries for Chisimba
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2008 04 10
-MODULE_VERSION: 0.3
+MODULE_VERSION: 0.301
 MODULE_PATH: ai
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,7 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: ai
 MODULE_CATEGORY: ai
 MODULE_TAGS: ai|utility
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
 CONFIG: chatserver|localhost|mod_ai_chatserver
 CONFIG: chaturl|/|mod_ai_chaturl
