--- a/aibot/register.conf
+++ b/aibot/register.conf
@@ -3,13 +3,13 @@ MODULE_NAME: Artificial Intelligence Bot
 MODULE_DESCRIPTION: Provides an API facade to the XML-RPC service of the AI Bot.
 MODULE_AUTHORS: Charl van Niekerk
 MODULE_RELEASEDATE: 2010 03 18
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: aibot
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bot
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
 CONFIG: enabled|0|mod_aibot_conf_enabled
 CONFIG: url|0|mod_aibot_conf_url
