--- a/akismet/register.conf
+++ b/akismet/register.conf
@@ -3,13 +3,13 @@ MODULE_NAME: Akismet
 MODULE_DESCRIPTION: Interface to the Akismet spam filtering system.
 MODULE_AUTHORS: Charl van Niekerk
 MODULE_RELEASEDATE: 2010 09 05
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: akismet
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: akismet
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: stable
 
 UPDATE_DESCRIPTION: First version.
 
