--- a/alfresco/register.conf
+++ b/alfresco/register.conf
@@ -3,12 +3,12 @@ MODULE_NAME: Alfresco
 MODULE_DESCRIPTION: Allows a Alfresco installation to be used as a document management tool within Chisimba.
 MODULE_AUTHORS: Warren Windvogel
 MODULE_RELEASEDATE: 2010 12 31
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: alfresco
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
 MODULE_LANGTERMS: alfresco
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
 ISCONTEXTPLUGIN: 1
 CONTEXT_AWARE: 1
