Module status changes

--- a/aibot/register.conf
+++ b/aibot/register.conf
@@ -11,6 +11,8 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bot
 MODULE_STATUS: DEPRECATED
 
+USED_BY: bot
+
 CONFIG: enabled|0|mod_aibot_conf_enabled
 CONFIG: url|0|mod_aibot_conf_url
 
