--- a/beanstalk/register.conf
+++ b/beanstalk/register.conf
@@ -3,14 +3,15 @@ MODULE_NAME: Beanstalk
 MODULE_DESCRIPTION: Interface to the Beanstalk queue system.
 MODULE_AUTHORS: Charl van Niekerk
 MODULE_RELEASEDATE: 2010 09 04
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: beanstalk
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: beanstalk
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
+UPDATE_DESCRIPTION: Deprecated it
 UPDATE_DESCRIPTION: First version.
 
 CONFIG: host|localhost|mod_beanstalk_host
