--- a/bittorrent/register.conf
+++ b/bittorrent/register.conf
@@ -3,14 +3,14 @@ MODULE_NAME: Bittorrent
 MODULE_DESCRIPTION: HEAVY DEVELOPMENT - DO NOT INSTALL. BitTorrent is a peer-to-peer file sharing (P2P) communications protocol. BitTorrent is a method of distributing large amounts of data widely without the original distributor incurring the entire costs of hardware, hosting and bandwidth resources. Instead, when data is distributed using the BitTorrent protocol, each recipient supplies pieces of the data to newer recipients, reducing the cost and burden on any given individual source, providing redundancy against system problems, and reducing dependence on the original distributor.
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2007 09 28
-MODULE_VERSION: 0.2
+MODULE_VERSION: 0.201
 MODULE_PATH: bittorrent
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bittorrent
 MODULE_CATEGORY: utilities
-MODULE_STATUS: alpha
+MODULE_STATUS: DEPRECATED
 MENU_CATEGORY: resources
 
 TAGS: do-not-install
