--- a/blowcrypt/register.conf
+++ b/blowcrypt/register.conf
@@ -3,14 +3,14 @@ MODULE_NAME: blowcrypt
 MODULE_DESCRIPTION: Module for encrypting and decrypting data using Blowfish. The module is primarily intended to provide encryption for webservices, allowing secure transfer of data across webservices.
 MODULE_AUTHORS: Serge Meunier
 MODULE_RELEASEDATE: 2007 02 15
-MODULE_VERSION: 0.31
+MODULE_VERSION: 0.311
 MODULE_PATH: blowcrypt
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_CATEGORY: utility
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
 
