--- a/buddies/register.conf
+++ b/buddies/register.conf
@@ -3,16 +3,17 @@ MODULE_NAME: Buddies
 MODULE_DESCRIPTION: Manages the user's buddies. Allows the user to make other users buddies which they can then send email, instant messages e.t.c. to.
 MODULE_AUTHORS: Jeremy O'Connor, Jameel Sauls
 MODULE_RELEASEDATE: 2005 02 01
-MODULE_VERSION: 1.231
+MODULE_VERSION: 1.232
 MODULE_PATH: buddies
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Buddies
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: beta
 MENU_CATEGORY: user
 SIDEMENU: user-2
 
+UPDATE_DESCRIPTION: [dwk] Changed status to beta 1.232
 UPDATE_DESCRIPTION: [kdc] Added new method for statusbar
 UPDATE_DESCRIPTION: [kdc] Fixed language error
 
