--- a/bot/register.conf
+++ b/bot/register.conf
@@ -3,13 +3,13 @@ MODULE_NAME: Bot
 MODULE_DESCRIPTION: Provides a generic bot interface.
 MODULE_AUTHORS: Charl van Niekerk
 MODULE_RELEASEDATE: 2010 03 11
-MODULE_VERSION: 0.002
+MODULE_VERSION: 0.003
 MODULE_PATH: api
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bot
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
 UPDATE_DESCRIPTION: Added mod_bot_invalidcommand language string.
 
