Module status changes

--- a/dumbassbot/register.conf
+++ b/dumbassbot/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: dumbassbot
 MODULE_DESCRIPTION: Module for sending doff MXit and Jabber messages to users to annoy them
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2009 07 13
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: dumbassbot
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,7 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: dumbassbot
 
 UPDATE_DESCRIPTION: Start
-MODULE_STATUS: alpha (for demo)
+MODULE_STATUS: DEPRECATED
 TAGS: jabber|XMPP|demo
 
 DEPENDS: im
