Module status changes

--- a/chemdoodle/register.conf
+++ b/chemdoodle/register.conf
@@ -2,7 +2,7 @@ MODULE_ID: chemdoodle
 MODULE_NAME: ChemDoodle
 MODULE_DESCRIPTION: The module can be used to display chemical molecules. It is used via a filter.
 MODULE_RELEASEDATE: 2010 10 01
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: chemdoodle
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
@@ -15,3 +15,5 @@ SIDEMENU: user-2
 
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
+
+COMMENT: It still needs some work, probably should point to a URL not a file since there is no way to upload files and get their file system path.
