--- a/ckeditorcontextplugin/register.conf
+++ b/ckeditorcontextplugin/register.conf
@@ -3,14 +3,16 @@ MODULE_NAME: [-context-] tools
 MODULE_DESCRIPTION: This is  collection of links to [-context-] resources that you can access from ckeditor
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: May 7, 2012, 10:31 pm
-MODULE_VERSION: 0.002
+MODULE_VERSION: 0.003
 MODULE_PATH: ckeditorcontextplugin
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: [-context-] tools
 MODULE_CATEGORY: ckeditorcontextplugin
+MODULE_STATUS: pre-alpha
 
+UPDATE_DESCRIPTION: [dwk] Added module status 0.003
 UPDATE_DESCRIPTION: [KDC] Added fix if no contexts exist
 
 MENU_CATEGORY: Developer
