Module status changes

--- a/clonesite/register.conf
+++ b/clonesite/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Clone an existing Chisimba site
 MODULE_DESCRIPTION: Clone a Chisimba site to create a new site by making symbolic links to existing files
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2008 01 08
-MODULE_VERSION: 0.02
+MODULE_VERSION: 0.021
 MODULE_PATH: clonesite
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,7 +14,7 @@ MODULE_CATEGORY: admin
 MENU_CATEGORY: admin
 
 TAGS: admin
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
 TEXT: mod_clonesite_title|Title for clone module|Clone an existing Chisimba site to create a new site
 TEXT: mod_clonesite_about|About text for clone module|This module will create a new site from an existing installed code base by making symbolic links to existing files. It does not require a separate copy of the code to be maintained, but it must be borne in mind that this creates a dependency between this site and the base site.
