--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.004
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -30,3 +30,4 @@ TEXT: mod_species_title|Module species title|Species information
 TEXT: mod_species_byalphaname|Alphabetical by group common name|Group common name
 TEXT: mod_species_repimg|Representative image of species|Representative image
 TEXT: mod_species_middletitle|Species mashup|Species mashup
+TEXT: mod_species_wikipovrv|Wikipedia overview|Wikipedia overview
