Added code block comments, added  parser for thumbnails

--- a/species/register.conf
+++ b/species/register.conf
@@ -28,6 +28,6 @@ TEXT: help_species_about_title|About species|About species
 TEXT: mod_species_name|Module species name|Species
 TEXT: mod_species_title|Module species title|Species information
 TEXT: mod_species_byalphaname|Alphabetical by group common name|Group common name
-TEXT: mod_species_repimg|Representative image of species|Representative image
+TEXT: mod_species_repimg|Flickr image of species|Flickr images
 TEXT: mod_species_middletitle|Species mashup|Species mashup
 TEXT: mod_species_wikipovrv|Wikipedia overview|Wikipedia overview
