--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.006
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -31,4 +31,4 @@ TEXT: mod_species_byalphaname|Alphabetical by group common name|Group common nam
 TEXT: mod_species_repimg|Flickr image of species|Flickr images
 TEXT: mod_species_middletitle|Species mashup|Species mashup
 TEXT: mod_species_wikipovrv|Wikipedia overview|Wikipedia overview
-TEXT: mod_species_stub|Explains a stub|This article is a stub on Wikipedia. This means that the information about this species is incomplete. You could use your knowledge and passion for this species to create the article. Simply click the title at the top of this page, and go to the Wikipedia article where you can edit it to improve upon it.
+TEXT: mod_species_stub|Explains a stub|This article is a stub on Wikipedia. This means that the information about this species is incomplete. You could use your knowledge and passion for this species to improve upon the Wikipedia article. Simply click the title at the top of this page, and go to the Wikipedia article where you can edit it to improve upon it.
