--- a/cmscomments/register.conf
+++ b/cmscomments/register.conf
@@ -3,18 +3,19 @@ MODULE_NAME: CMS Style Comments
 MODULE_DESCRIPTION: CMS style commenting system. This module aims to provide a unified API to create, manage and moderate comments for any other module that provides content to users. This will enable users to comment on the content, thereby creating an avenue to improve content by all content authors, based on user feedback.
 MODULE_AUTHORS: PrinceMbekwa,Paul Scott
 MODULE_RELEASEDATE: 2006 12 18
-MODULE_VERSION: 0.713
+MODULE_VERSION: 0.714
 MODULE_PATH:cmscomments
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: cmscomments
 MODULE_CATEGORY: cms
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: beta
 TABLE: tbl_cmscomments
 
 TAGS: content management|cms
 
+UPDATE_DESCRIPTION: Changed status to beta
 UPDATE_DESCRIPTION: Changed loading of scriptaculous to the prototype module
 UPDATE_DESCRIPTION: Added explicit load of scriptaculous in commentapi_class_inc.php
 
