Changed status to beta

--- a/codesniffer/register.conf
+++ b/codesniffer/register.conf
@@ -11,7 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: codesniffer
 MODULE_CATEGORY: codesniffer
 
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: alpha
 
 CONFIG: report_path|/var/www/|mod_codesniffer_reportpath
 CONFIG: code_path|/var/www/chisimba/|mod_codesniffer_codepath
