Changed status to  DEPRECATED

--- a/codewriter/register.conf
+++ b/codewriter/register.conf
@@ -14,7 +14,7 @@ MODULE_CATEGORY: codewriter
 MENU_CATEGORY: developer
 
 TAGS: developer
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
 TEXT: mod_codewriter_title|Title for codewriter module|Code authoring tool
 TEXT: mod_codewriter_about|About text for codewriter module|Code authoring tool for Chisimba in PHP, CSS, javascript, etc based on codepress.
