Changed status to  BETA

--- a/comment/register.conf
+++ b/comment/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Comment
 MODULE_DESCRIPTION: Comment on any table item on the site. A Feedback comment system which collects comments about a product, website, or other subject. Comments are usually placed on blogs, but in Chisimba just about any module can have comments attached to content. Some comment systems even have a rating feature, allowing visitors to rate the page they're viewing. This can help the website developer expand material, correct mistakes, sort content by popularity and remove content that isn't liked by the visitors. Collecting comments from visitors is very important, especially if your website is for commercial purposes. It can help you understand what your visitors are looking for and what your visitors do not want. It can also point out which parts of the site are most popular and which are not.
 MODULE_AUTHORS: Derek Keats, Serge Meunier
 MODULE_RELEASEDATE: 2006 07 27
-MODULE_VERSION: 0.2.0
+MODULE_VERSION: 0.201
 MODULE_PATH: comment
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -15,7 +15,7 @@ DEPENDS_CONTEXT: 0
 MODULE_CATEGORY: blog
 MODULE_CATEGORY: utility
 MODULE_CATEGORY: survey
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: beta
 ACL: moderators
 
 CONDITION: isModerator|hasPermission|moderators
