Changed status to  BETA

--- a/commenttypeadmin/register.conf
+++ b/commenttypeadmin/register.conf
@@ -10,7 +10,7 @@ MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: commenttypeadmin
 MODULE_CATEGORY: survey
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: beta
 PAGE: admin_site
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
