Changed status to  BETA

--- a/communications/register.conf
+++ b/communications/register.conf
@@ -3,13 +3,13 @@ MODULE_NAME: Communications
 MODULE_DESCRIPTION: The Communications module provides a number of tools that can be used to facilitate different types of communication between users, site administrators and external sources within the application framework. The communication module includes diverse tools, or interfaces to tools, like ICQ, Yahoo! IM and Skype. This is a support module for the Chisimba framework, and requires no user input.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2004 07 07
-MODULE_VERSION: 0.31
+MODULE_VERSION: 0.311
 MODULE_PATH: communications
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_CATGEGORY: communications
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: beta
 TAGS: communications
 
 
