Changed status to  DEPRECATED

--- a/createaccount/register.conf
+++ b/createaccount/register.conf
@@ -10,7 +10,7 @@ MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: createaccount
 MODULE_CATEGORY: createaccount
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 
 COMMENT: Investigate, this might be removable.
 
