Changed status to  DEPRECATED

--- a/conferenceprelogin/register.conf
+++ b/conferenceprelogin/register.conf
@@ -3,11 +3,11 @@ MODULE_NAME: Conference Information
 MODULE_DESCRIPTION: Delivery system for conference specific information including registration to the conference and site, submission of abstracts and or papers.
 MODULE_AUTHORS: Megan Watson
 MODULE_RELEASEDATE: 2006 11 15
-MODULE_VERSION: 0.41
+MODULE_VERSION: 0.412
 MODULE_PATH: conferenceprelogin
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 TABLE: tbl_conference_register
 TABLE: tbl_conference_regconfig
 
