Changed status to stable

--- a/conversions/register.conf
+++ b/conversions/register.conf
@@ -4,7 +4,7 @@ MODULE_RELEASEDATE: 2007 1 12
 MODULE_DESCRIPTION: This module converts SI units in the fields such as temperature, length, volume and distance. Simplicity is the core of this module which alleviates users of any complications whilst using it, though measures have been taken not to compromise the prime functionality of the module.     
 MODULE_AUTHORS: Nonhlanhla Gangeni, Nazheera Khan, Faizel Lodewyk, Hendry Thobela, Ebrahim Vasta, Keanon Wagner, Raymond Williams   
 MODUE_RELEASEDATE:  2007 / 09 / 19
-MODULE_VERSION: 1.31
+MODULE_VERSION: 1.311
 MODULE_PATH: conversions
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,7 +12,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: conversions
 MODULE_CATEGORY:Utilities
 MENU_CATEGORY: Utilities
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: stable
 TAGS: utility|experimental|student projects
 
 TEXT: mod_conversions_volumeconverter|Convert header|Volume Converter
