Moved to user menu

--- a/conversions/register.conf
+++ b/conversions/register.conf
@@ -11,7 +11,7 @@ MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: conversions
 MODULE_CATEGORY:Utilities
-MENU_CATEGORY: Utilities
+MENU_CATEGORY: User
 MODULE_STATUS: stable
 TAGS: utility|experimental|student projects
 
