--- a/courselecturers/register.conf
+++ b/courselecturers/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Course Lecturers
 MODULE_DESCRIPTION: Manages the list of Lecturers taking a particular course. Allows students to know the Lecturers which they can then send email, instant messages e.t.c. to.
 MODULE_AUTHORS: John Abakpa Emmanuel Okewu based on the Buddies Module by Jeremmy O'Connor
 MODULE_RELEASEDATE: 2007 02 27
-MODULE_VERSION: 1.01
+MODULE_VERSION: 1.02
 MODULE_PATH: courselecturers
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,7 +12,7 @@ MODULE_LANGTERMS: courselecturers
 
 MENU_CATEGORY: user
 SIDEMENU: user-2
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: DEPRECATED
 TAGS: elearning|experimental
 
 TABLE: tbl_courselecturers
