Changed status to beta

--- a/contextstats/register.conf
+++ b/contextstats/register.conf
@@ -10,7 +10,7 @@ MODULE_HASADMINPAGE: 1
 MODULE_CATEGORY: context
 PAGE: admin_content
 MENU_CATEGORY: Admin
-MODULE_STATUS: unstable
+MODULE_STATUS: beta
 MODULE_ISADMIN: 1
 MODULE_ISLECTURER: 0
 CONTEXT_AWARE: 0
