--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.008
+MODULE_VERSION: 0.009
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -19,6 +19,8 @@ MENU_CATEGORY: User
 DEPENDS: flickrshow
 
 // Set the config parameters and their defaults.
+CONFIG: species_findsounds|TRUE|mod_species_findsounds
+TEXT: mod_species_findsounds|Look for sounds|Do you want SPECIES to look for sound clips on the Encyclopedia of Life? If your speices list contains birds, or mammals, it makes sense to look for sound bytes, but if the list contains species, it makes sense to set this parameter to FALSE.
 CONFIG: species_userlist|1|mod_species_userlist
 TEXT: mod_species_userlist|List of users to search for bird images|A comma delimited list of users (as user IDs) to search for species images. Users must save images in species/genus_species/ in their default file directory. You can find your user ID by going to My profile on the User menu.
 
