--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.009
+MODULE_VERSION: 0.010
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,7 +11,9 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: species
 MODULE_CATEGORY: species
 
-TABLE: tbl_species_list
+TABLE: tbl_birds_list
+TABLE: tbl_mammals_list
+TABLE: tbl_plants_list
 
 MENU_CATEGORY: User
 
@@ -37,3 +39,4 @@ TEXT: mod_species_stub|Explains a stub|This article is a stub on Wikipedia. This
 TEXT: mod_species_eoltitle|Encyclopedia of Life results|Encyclopedia of Life results
 TEXT: mod_species_eolsound|Sound file via EOL|Sounds via EOL
 TEXT: mod_species_eolnosound|EOL has no sound|The Encyclopedia of Life (EOL) has no sound file for [-species-]. If you know of a freely accessible sound recording for this species, you can join EOL and provide a link to the sound file. If you have access to this species, you could record it and donate the recording to EOL.
+TEXT: mod_species_changegroup|Change organisms|Change organisms
