Fixed for species not found when indexed by latin name only.

--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.011
+MODULE_VERSION: 0.013
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,7 +13,7 @@ MODULE_CATEGORY: species
 
 TABLE: tbl_birds_list
 TABLE: tbl_mammals_list
-TABLE: tbl_plants_list
+TABLE: tbl_plants_proteaceae_list
 
 MENU_CATEGORY: User
 
