Improved layout & more usable links

--- a/species/register.conf
+++ b/species/register.conf
@@ -40,3 +40,4 @@ TEXT: mod_species_eoltitle|Encyclopedia of Life results|Encyclopedia of Life res
 TEXT: mod_species_eolsound|Sound file via EOL|Sounds via EOL
 TEXT: mod_species_eolnosound|EOL has no sound|The Encyclopedia of Life (EOL) has no sound file for [-species-]. If you know of a freely accessible sound recording for this species, you can join EOL and provide a link to the sound file. If you have access to this species, you could record it and donate the recording to EOL.
 TEXT: mod_species_changegroup|Change organisms|Change organisms
+TEXT: mod_species_viewonflickr|View image on Flickr|View image on Flickr
